# lm-talk

./: .dockerignore  .gitignore  Cargo.toml  DESIGN.md  README.md  README_zh.md  SECURITY.md  SECURITY_zh.md  TODO.md
.github/: dependabot.yml
.github/workflows/: ci.yml  federation-smoke.yml  fuzz.yml  pages.yml  release-node.yml  sqlcipher-smoke.yml
apps/node-admin/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
apps/web/: Dockerfile  LICENSE  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
crates/lm_core/: Cargo.toml  LICENSE
crates/lm_core/examples/: generate_identity_vector.rs  generate_vectors.rs
crates/lm_core/src/: error.rs  file.rs  lib.rs  limits.rs
crates/lm_core/src/codec/: mod.rs
crates/lm_core/src/contact/: mod.rs
crates/lm_core/src/crypto/: mod.rs
crates/lm_core/src/device/: mod.rs
crates/lm_core/src/friend/: mod.rs
crates/lm_core/src/group/: mod.rs
crates/lm_core/src/identity/: mod.rs
crates/lm_core/src/message/: mod.rs
crates/lm_core/src/network/: mod.rs
crates/lm_core/src/outbox/: mod.rs
crates/lm_core/src/passphrase/: mod.rs
crates/lm_core/src/policy/: mod.rs
crates/lm_core/src/prekey/: mod.rs
crates/lm_core/src/protocol/: mod.rs
crates/lm_core/src/ratchet/: mod.rs
crates/lm_core/src/storage/: mod.rs
crates/lm_core/tests/: e2e_secure_flow.rs  property_tests.rs  test_vectors.rs
crates/lm_node/: Cargo.toml  MODULE_SPLIT_PLAN.md
crates/lm_node/src/: config.rs  control.rs  control_server.rs  dht_runner.rs  kademlia.rs  lib.rs  libp2p_transport.rs  mailbox.rs  main.rs  metrics.rs  prekey_store.rs  state_db.rs
crates/lm_node/tests/: e2e_http_control_flow.rs  e2e_node_flow.rs
crates/lm_wasm/: Cargo.toml
crates/lm_wasm/src/: lib.rs  tests.rs
crates/lm_wasm/tests/: wasm_api.rs
deploy/lm-node-federation/: Caddyfile.b  Caddyfile.c  README.md  chaos-smoke.sh  compose.sh  docker-compose.yml  load-smoke.sh  node-a.json  node-b.json  node-c.json  run-all.sh  smoke-test.sh
deploy/lm-node-public/: Caddyfile.example  Dockerfile  README.md  config.example.json  docker-compose.yml  install.sh  verify.sh
docker/node/: Dockerfile  README.md
docker/web/: Caddyfile  Dockerfile  README.md
docs/: AUDIT_REMEDIATION_TRACKER.md  BACKUP_SPEC.md  CONTACT_SPEC.md  CRYPTO_REVIEW_NOTES.md  DESIGN.md  DIAGNOSTICS_SPEC.md  EXTERNAL_AUDIT_PACKET.md  FRIEND_SPEC.md  FUZZING.md  GROUP_SPEC.md  IDENTITY_SPEC.md  MESSAGE_SPEC.md  MVP_PLAN.md  NETWORK_SPEC.md  NODE_CONFIG.md  PRODUCTION_READINESS.md  PROTOCOL_STABILITY.md  PUBLIC_DEPLOYMENT_REPORT_TEMPLATE.md  PUBLIC_FEDERATION_RUNBOOK.md  PUBLIC_PEER_SPEC.md  README.md  RELEASE_CHECKLIST.md  RELEASE_EVIDENCE.md  RELEASE_RISK_REGISTER.md  RELEASE_SIGNING.md  RELEASE_SIGNOFF.md  SECURITY_AUDIT_SCOPE.md  SECURITY_MODEL.md  STORAGE_SPEC.md  TEST_VECTOR_COVERAGE.md  TODO.md
docs/deploy/: LAN_QUICKSTART.md  NODE_CONFIG.md  PUBLIC_DEPLOYMENT_REPORT_TEMPLATE.md  PUBLIC_FEDERATION_RUNBOOK.md
docs/examples/: lm-node.config.example.json
docs/overview/: DESIGN.md  DEV_WORKFLOW.md  MOBILE_UI_DESIGN.md  MVP_PLAN.md  PRODUCTION_READINESS.md  TODO.md
docs/protocol/: BACKUP_SPEC.md  CONTACT_SPEC.md  DIAGNOSTICS_SPEC.md  FRIEND_SPEC.md  GROUP_SPEC.md  IDENTITY_SPEC.md  MESSAGE_SPEC.md  NETWORK_SPEC.md  PUBLIC_PEER_SPEC.md  STORAGE_SPEC.md
docs/release/: RELEASE_CHECKLIST.md  RELEASE_EVIDENCE.md  (+3 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: core_imports.rs  node_control_request.rs  node_dht_rpc.rs
scripts/: audit.sh  build.sh  check-sqlcipher-deploy.sh  check.sh  collect-release-evidence.sh  dev-build.sh  dev-env.sh  dev-run.sh  dev-test.sh  e2e.sh  env.sh  fuzz-campaign.sh  fuzz-run.sh  fuzz-smoke.sh  lan-start.sh  package-node-release.py  preprod-evidence.sh  release-check.sh  release-evidence.sh  release-package.py  release-preprod.sh  release-risk-gate.sh  release-signing.sh  release-verify.sh  risk-register-gate.sh  run.sh  setup-web-env.sh  signing-evidence.sh  sqlcipher-deploy-smoke.sh  sqlcipher-smoke.sh  start-node.sh  test.sh  verify-node-release.sh  web-build.sh  web-dev.sh
test-vectors/: backup_v1.json  contact_card_dht_v1.json  contact_card_v1.json  device_v1.json  file_package_v1.json  friend_request_v1.json  group_sender_key_v1.json  group_v1.json  identity_v1.json  message_crypto_v1.json  per_device_envelope_v1.json  prekey_v1.json  public_peer_v1.json  ratchet_v1.json  receipt_mailbox_v1.json  self_sync_v1.json
(+89 files in other folders)
