[package]
name = "lm-talk-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
lm_core = { path = "../crates/lm_core" }
lm_node = { path = "../crates/lm_node" }
serde_json = "1"

[[bin]]
name = "core_imports"
path = "fuzz_targets/core_imports.rs"
test = false
doc = false
bench = false

[[bin]]
name = "node_dht_rpc"
path = "fuzz_targets/node_dht_rpc.rs"
test = false
doc = false
bench = false

[[bin]]
name = "node_control_request"
path = "fuzz_targets/node_control_request.rs"
test = false
doc = false
bench = false
