[package]
name = "lm_core"
version = "0.1.0"
description = "Core protocol and crypto library for LM Talk"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
argon2.workspace = true
base64.workspace = true
blake3.workspace = true
chacha20poly1305.workspace = true
ed25519-dalek.workspace = true
getrandom.workspace = true
hkdf.workspace = true
postcard.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
unicode-normalization.workspace = true
uuid.workspace = true
zeroize.workspace = true
x25519-dalek.workspace = true
data-encoding.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys.workspace = true

[dev-dependencies]
