[package]
name = "lm_node"
version = "0.1.0"
description = "Native public peer / DHT scaffold for LM Talk"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
lm_core = { path = "../lm_core" }
base64.workspace = true
blake3.workspace = true
futures.workspace = true
getrandom.workspace = true
libp2p.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
tokio.workspace = true
uuid.workspace = true

[features]
default = []
sqlcipher = ["rusqlite/bundled-sqlcipher-vendored-openssl"]
